--- a/nginx/www.langton.cloud.conf
+++ b/nginx/www.langton.cloud.conf
@@ -3,6 +3,9 @@ server {
   listen [::]:80;
 
   server_name www.langton.cloud;
+  if ($http_x_forwarded_proto != "https") {
+    rewrite ^(.*)$ https://$server_name$1 permanent;
+  }
   root /var/www/ghost/system/nginx-root;
 
   location ^~ /assets/ {
@@ -13,8 +16,8 @@ server {
     proxy_set_header Host $http_host;
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-Forwarded-Proto $scheme;
-    proxy_pass http://localhost:2368;
+    proxy_set_header X-Forwarded-Proto https;
+    proxy_pass http://127.0.0.1:2368;
   }
 
   location / {
@@ -30,7 +33,7 @@ server {
     add_header X-Cache-Status $upstream_cache_status;
 
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-Forwarded-Proto $scheme;
+    proxy_set_header X-Forwarded-Proto https;
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header Host $http_host;
     proxy_pass http://127.0.0.1:2368;
