updated nginx and template to redirect to https

--- a/nginx/www.langton.cloud.conf
+++ b/nginx/www.langton.cloud.conf
@@ -50,12 +50,12 @@ server {
   listen [::]:80;
 
   server_name langton.cloud;
-  return 301 $scheme://www.langton.cloud$request_uri;
+  return 301 https://www.langton.cloud$request_uri;
 }
 server {
   listen 80;
   listen [::]:80;
 
   server_name blog.langton.cloud;
-  return 301 $scheme://www.langton.cloud$request_uri;
+  return 301 https://www.langton.cloud$request_uri;
 }
