--- a/src/currency-checker/wallet.cfg
+++ b/src/currency-checker/wallet.cfg
@@ -2,29 +2,35 @@
 explorer_base_url = https://api.zcha.in/v2/mainnet/accounts
 coin_code = ZEC
 wallet = ["t1bAK1d1oHdt1D3qsa6hwEBbXCeZNJo7PRF"]
+api_key =
 pools_base_url = https://miningpoolhub.com/index.php?api_key={api_key}&page=api&action=getuserallbalances
 
 [bitcoin]
 explorer_base_url = https://chain.so/api/v2/address/btc
 coin_code = BTC
 wallet = ["3QXuVLLdFvFrBtNLcBaiCmdfTF3tgmTfbq","33DVYUMZnRhqeE2Ss4wsFWspn26amBvCxo"]
+api_key =
 pools_base_url = https://miningpoolhub.com/index.php?api_key={api_key}&page=api&action=getuserallbalances
 
 [dash]
 explorer_base_url = https://chain.so/api/v2/address/dash
 coin_code = DASH
 wallet = ["XhjYepBSjerA1xoCbKWQ61eRkNsrtiCmUt"]
+api_key =
 pools_base_url = https://miningpoolhub.com/index.php?api_key={api_key}&page=api&action=getuserallbalances
 
 [raven]
-explorer_base_url = https://threeeyed.info/ext/getaddress
+explorer_base_url = https://rvnexplorer.com/ext/getaddress
 coin_code = RVN
-wallet = ["RW1wM5WTS3zVyNoy8SukTkGk8TBqtQDrFz"]
+wallet = ["RW1wM5WTS3zVyNoy8SukTkGk8TBqtQDrFz","RLnvBC53t63rZHywCvAs5XYr62KWEkA4kv","RDZ8CtN3bupTuiaezVkwtXHFZzMTM7E3Bi"]
+api_key =
 pools_base_url = https://rvn.suprnova.cc/index.php?api_key={api_key}&id=21562&page=api&action=getuserbalance
 
 [other]
 currency = AUD
 rate_base_url = https://api.coinmarketcap.com/v1
-s3_bucket = 
-aws_profile = 
-aws_bin = 
+s3_bucket =
+aws_profile =
+aws_bin =
+cleanup = True
+backup_to_s3 = False
