--- a/config.production.json.example
+++ b/config.production.json.example
@@ -1,5 +1,5 @@
 {
-  "url": "http://www.example.com",
+  "url": "https://www.langton.cloud",
   "server": {
     "port": 2368,
     "host": "127.0.0.1"
@@ -7,7 +7,7 @@
   "database": {
     "client": "mysql",
     "connection": {
-      "host": "",
+      "host": "ghost-rds.langton.cloud",
       "user": "ghost",
       "password": "",
       "database": "ghost"
@@ -25,8 +25,9 @@
   "storage": {
     "active": "s3",
     "s3": {
-     "bucket": "",
-     "pathPrefix": "ghost/"
+      "bucket": "chrisdlangton",
+      "pathPrefix": "ghost/",
+      "serverSideEncryption": "AES256"
     }
   },
   "process": "systemd",
