--- a/nginx/www.langton.cloud.conf
+++ b/nginx/www.langton.cloud.conf
@@ -59,3 +59,11 @@ server {
   server_name blog.langton.cloud;
   return 301 https://www.langton.cloud$request_uri;
 }
+server {
+  listen 80;
+  location /elb-status {
+    access_log off;
+    return 200 'A-OK!';
+    add_header Content-Type text/plain;
+  }
+}
