updates for ec2 ghost

--- a/awslogs.conf
+++ b/awslogs.conf
@@ -117,14 +117,6 @@ state_file = /var/lib/awslogs/agent-state
 #  %c           Locale's appropriate date and time representation.                                      Tue Aug 16 21:30:00 1988 (en_US)
 # ----------------------------------------------------------------------------------------------------------------------
 
-[/var/log/cloud-init]
-datetime_format = %b %d %H:%M:%S
-file = /var/log/cloud-init.log
-buffer_duration = 5000
-log_stream_name = cloud-init-{instance_id}
-initial_position = end_of_file
-log_group_name = /aws/ec2/ghost
-
 [/var/log/syslog]
 datetime_format = %b %d %H:%M:%S
 file = /var/log/syslog
@@ -163,4 +155,20 @@ file = /var/log/nginx/error.log
 buffer_duration = 5000
 log_stream_name = nginx-error-{instance_id}
 initial_position = end_of_file
+log_group_name = /aws/ec2/ghost
+
+[/var/log/rclocal]
+datetime_format = %b %d %H:%M:%S
+file = /var/log/rc.local.log
+buffer_duration = 5000
+log_stream_name = rclocal-{instance_id}
+initial_position = start_of_file
+log_group_name = /aws/ec2/ghost
+
+[/var/log/cloud-init]
+datetime_format = %b %d %H:%M:%S
+file = /var/log/cloud-init.log
+buffer_duration = 5000
+log_stream_name = cloud-init-{instance_id}
+initial_position = start_of_file
 log_group_name = /aws/ec2/ghost
