--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,20 @@
 language: node_js
-
+cache:
+  directories:
+    - node_modules
 git:
   submodules: false
-
 env:
   global:
     - AWS_DEFAULT_REGION=ap-southeast-2
-
-before_install:
-  - npm install -g cfn-lint
-
+node_js:
+  - '10'
 install: true
-
+before_install:
+  - npm i -g npm@^2.0.0
+before_script:
+  - npm prune
+  - npm install -g cfn-lint
 script:
   - cfn-lint validate templates/bastion.yaml
   - cfn-lint validate templates/ghost.yaml
